<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 Chris Banes
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="tab_photos">Photos</string>
    <string name="tab_selected_photos">Selected (%1$d)</string>
    <string name="photo_effects">Effects</string>
    <string name="photo_caption">Caption</string>
    <string name="photo_rotate">Rotate</string>
    <string name="photo_crop">Crop</string>
    <string name="photo_reset">Reset</string>
    <string name="tag_no_name">Who\'s this?</string>
    <string name="tab_uploads">Uploads</string>
    <string name="upload_title">Upload</string>
    <string name="upload_retry">Retry Failed</string>
    <string name="upload_quality_title">Quality</string>
    <string name="upload_quality_low">Low (640px)</string>
    <string name="upload_quality_medium">Medium (1024px)</string>
    <string name="upload_quality_high">High (2048px)</string>
    <string name="upload_quality_max">Max (original)</string>
    <string name="upload_target_title">Upload to</string>
    <string name="upload_target_album">ALBUM</string>
    <string name="upload_target_wall">WALL</string>
    <string name="upload_target_group">GROUP</string>
    <string name="upload_target_event">EVENT</string>
    <string name="upload_new_album_hint">New album name</string>
    <string name="upload_new_album_desc_hint">Description</string>
    <string name="upload_new_album">New Album</string>
    <string name="upload_privacy_title">Privacy</string>
    <string name="upload_account">Account</string>
    <string name="tag_friend_prompt">Tap to tag</string>
    <string name="place">Place</string>
    <string name="error_select_photos">Please select some photos to upload first</string>
    <string name="error_select_album">Please select an album first</string>
    <string name="error_not_connected">You\'re not connected to the Internet, try again later.
    </string>
    <string name="notification_uploading_photo">Uploading Photo %1$s</string>
    <string name="notification_uploading_photo_progress">Uploading Photo %1$d %2$d%%</string>
    <string name="crash_toast">photup just crashed :( The developer has been notified of the
        cause.
    </string>
    <string name="untitled_photo">Untitled Photo</string>
    <string name="detecting_faces">Detecting Faces</string>
    <string name="empty_selected_photos">You have not selected any photos yet.</string>
    <string name="welcome_message">Welcome to photup. To continue press the button below to login to
        Facebook.
    </string>
    <string name="login">Login</string>
    <string name="login_promo">Tell your friends about photup?</string>
    <string name="logout_static">Logout</string>
    <string name="logout">Logout %1$s</string>
    <string name="logout_prompt_title">Are you sure?</string>
    <string name="libraries">Libraries</string>
    <string name="settings">Settings</string>
    <string name="select_all">Select All</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="places_search_hint">Search</string>
    <string name="pref_instant_upload_title">Instant Upload</string>
    <string name="pref_instant_upload_album_title">Album</string>
    <string name="pref_instant_upload_album_summary">Select the album to automatically upload to
    </string>
    <string name="pref_instant_upload_quality_title">Quality</string>
    <string name="pref_instant_upload_filter_title">Effect</string>
    <string name="pref_instant_upload_filter_summary">Select an effect to be applied automatically
    </string>
    <string name="pref_instant_upload_roaming_title">Roaming</string>
    <string name="pref_instant_upload_roaming_summary">Instant Upload if roaming?</string>
    <string name="pref_instant_upload_wifi_only_title">WiFi Only?</string>
    <string name="pref_instant_upload_wifi_only_summary">Only Instant Upload when connected to
        WiFi?
    </string>
    <string name="pref_general_screen">General Settings</string>
    <string name="pref_save_files_gallery_title">Save Images</string>
    <string name="pref_save_files_gallery_summary">Save Images to Gallery?</string>
    <string name="pref_more_options">Advanced Settings</string>
    <string name="dialog_instant_upload">photup now has Instant Upload! This means that whenever you
        take a photo, photup can automatically upload it to Facebook.\n\nJust enable it in Settings
        and we\'ll do the rest!
    </string>
    <string name="dialog_missdonateing_pages_title">Missing Accounts?</string>
    <string name="dialog_missing_items_title">Missing Items?</string>
    <string name="dialog_missing_items_text">Is there anything missing from this list? If so then we
        need to request an extra permission from Facebook. Click the button below to continue.
    </string>
    <string name="privacy_public">Public</string>
    <string name="privacy_friends">Friends</string>
    <string name="privacy_me">Me</string>
    <string name="dialog_place_overwrite_title">Overwrite Place</string>
    <string name="dialog_place_overwrite_text">You have selected a place here, but also on some of
        the individual photos. Do you wish to overwrite all of your Place selections?
    </string>

    <string name="promo_text">I\'m checking out photup for Facebook, a new Facebook photo sharer for
        Android. Give it a try!
    </string>
    <string name="album_all">All Photos</string>
    <string name="action_bar_upload_progress">%1$d of %2$d</string>
    <string name="opening_app">Opening&#8230;</string>
    <string name="stop_uploads">Stop Uploading</string>
    <string name="start_uploads">Start Uploading</string>
    <string name="stopped_uploads">Uploading is Disabled</string>
    <string name="started_uploads">Uploading is Enabled</string>
    <string name="empty_uploads">No uploads available</string>
    <string name="location_current">Current Location</string>
    <string name="location_photo">Photo Location</string>

</resources>