<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/menu_uploads"
		android:showAsAction="ifRoom"
		android:title="@string/tab_uploads"
		android:visible="false"/>
	<item
		android:id="@+id/menu_upload"
		android:actionLayout="@layout/layout_action_upload"
		android:showAsAction="ifRoom"
		android:title="@string/upload_title"/>
	<item
		android:id="@+id/menu_select_all"
		android:showAsAction="never"
		android:title="@string/select_all"/>
	<item
		android:id="@+id/menu_clear_selection"
		android:showAsAction="never"
		android:title="@string/clear_selection"/>
	<item
		android:id="@+id/menu_settings"
		android:showAsAction="never"
		android:title="@string/settings"/>
	<item
		android:id="@+id/menu_donate"
		android:showAsAction="never"
		android:title="@string/donate_title"/>
	<item
		android:id="@+id/menu_logout"
		android:showAsAction="never"
		android:title="@string/logout_static"/>

</menu>