<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 Chris Banes
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_caption"
        android:icon="@drawable/ic_action_caption"
        android:showAsAction="ifRoom"
        android:title="@string/photo_caption" />
    <item
        android:id="@+id/menu_filters"
        android:icon="@drawable/ic_action_fx"
        android:showAsAction="always"
        android:title="@string/photo_effects" />
    <item
        android:id="@+id/menu_crop"
        android:icon="@drawable/ic_action_crop"
        android:showAsAction="ifRoom"
        android:title="@string/photo_crop" />
    <item
        android:id="@+id/menu_rotate"
        android:icon="@drawable/ic_action_rotate"
        android:showAsAction="ifRoom"
        android:title="@string/photo_rotate" />
    <item
        android:id="@+id/menu_place"
        android:icon="@drawable/ic_action_place"
        android:showAsAction="ifRoom"
        android:title="@string/place" />
    <item
        android:id="@+id/menu_reset"
        android:icon="@drawable/ic_menu_reset"
        android:showAsAction="never"
        android:title="@string/photo_reset" />

</menu>