<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 Chris Banes
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_uploading_stop"
        android:icon="@drawable/ic_action_pause"
        android:showAsAction="ifRoom|withText"
        android:title="@string/stop_uploads"
        android:visible="false" />
    <item
        android:id="@+id/menu_uploading_start"
        android:icon="@drawable/ic_action_start"
        android:showAsAction="ifRoom|withText"
        android:title="@string/start_uploads"
        android:visible="false" />
    <item
        android:id="@+id/menu_retry_failed"
        android:showAsAction="ifRoom"
        android:title="@string/upload_retry" />

</menu>