<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:animateLayoutChanges="true"
		android:orientation="vertical"
		android:padding="@dimen/double_spacing" >

		<TextView
			style="?android:attr/listSeparatorTextViewStyle"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/upload_account" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<Spinner
				android:id="@+id/sp_upload_account"
				android:layout_width="0px"
				android:layout_height="@dimen/form_item_height"
				android:layout_weight="1" />

			<ImageButton
				android:id="@+id/btn_account_help"
				android:layout_width="@dimen/form_item_height"
				android:layout_height="@dimen/form_item_height"
				android:background="?attr/actionBarItemBackground"
				android:padding="@dimen/spacing"
				android:src="@drawable/ic_menu_help" />
		</LinearLayout>

		<TextView
			android:id="@+id/tv_album_title"
			style="?android:attr/listSeparatorTextViewStyle"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/double_spacing"
			android:text="@string/upload_album_title" />

		<LinearLayout
			android:id="@+id/ll_album_spinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<Spinner
				android:id="@+id/sp_upload_album"
				android:layout_width="0px"
				android:layout_height="@dimen/form_item_height"
				android:layout_weight="1" />

			<ImageButton
				android:id="@+id/btn_new_album"
				android:layout_width="@dimen/form_item_height"
				android:layout_height="@dimen/form_item_height"
				android:background="?attr/actionBarItemBackground"
				android:padding="@dimen/spacing"
				android:src="@drawable/ic_menu_add" />
		</LinearLayout>

		<TextView
			style="?android:attr/listSeparatorTextViewStyle"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/double_spacing"
			android:text="@string/place" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical" >

			<uk.co.senab.photup.views.NetworkedCacheableImageView
				android:id="@+id/iv_place_photo"
				android:layout_width="@dimen/listview_sml_item_dimension"
				android:layout_height="@dimen/listview_sml_item_dimension"
				android:scaleType="centerCrop" />

			<TextView
				android:id="@+id/btn_place"
				style="?android:attr/textAppearanceMedium"
				android:layout_width="0px"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="?attr/actionBarItemBackground"
				android:gravity="center_vertical"
				android:minHeight="@dimen/listview_sml_item_dimension"
				android:padding="@dimen/spacing"
				android:text="@string/place" />
		</LinearLayout>

		<TextView
			style="?android:attr/listSeparatorTextViewStyle"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/double_spacing"
			android:text="@string/upload_quality_title" />

		<RadioGroup
			android:id="@+id/rg_upload_quality"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<RadioButton
				android:id="@+id/rb_quality_high"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/form_item_height"
				android:checked="true"
				android:text="@string/upload_quality_high" />

			<RadioButton
				android:id="@+id/rb_quality_medium"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/form_item_height"
				android:text="@string/upload_quality_medium" />

			<RadioButton
				android:id="@+id/rb_quality_low"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/form_item_height"
				android:text="@string/upload_quality_low" />
		</RadioGroup>
	</LinearLayout>

</ScrollView>