<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/double_spacing" >

        <EditText
            android:id="@+id/et_album_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_item_height"
            android:hint="@string/upload_new_album_hint" />

        <EditText
            android:id="@+id/et_album_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upload_new_album_desc_hint"
            android:inputType="textMultiLine"
            android:minHeight="@dimen/form_item_height" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_spacing"
            android:text="@string/upload_privacy_title" />

        <Spinner
            android:id="@+id/sp_privacy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_item_height"
            android:entries="@array/privacy_settings" />

        <ImageButton
            android:id="@+id/ib_create_album"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/form_item_height"
            android:layout_marginTop="@dimen/double_spacing"
            android:src="@android:drawable/ic_menu_send" />

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/double_spacing"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>